# homedns

./: Cargo.toml  LICENSE  README.md
src/: dnssd_authority.rs  main.rs  qnap.rs  qnap_authority.rs
